--- a/packages/polar-axes/package.json
+++ b/packages/polar-axes/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@stu-dev/nivo-polar-axes",
-    "version": "0.84.3",
+    "version": "0.84.4",
     "license": "MIT",
     "author": {
         "name": "Raphaël Benitte",
@@ -28,10 +28,10 @@
         "!dist/tsconfig.tsbuildinfo"
     ],
     "dependencies": {
+        "@react-spring/web": "9.4.5 || ^9.7.2",
         "@stu-dev/nivo-arcs": "workspace:*",
         "@stu-dev/nivo-core": "workspace:*",
-        "@stu-dev/nivo-scales": "workspace:*",
-        "@react-spring/web": "9.4.5 || ^9.7.2"
+        "@stu-dev/nivo-scales": "workspace:*"
     },
     "peerDependencies": {
         "react": ">= 16.14.0 < 19.0.0"
