--- a/packages/tooltip/package.json
+++ b/packages/tooltip/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@stu-dev/nivo-tooltip",
-    "version": "0.84.3",
+    "version": "0.84.4",
     "license": "MIT",
     "author": {
         "name": "Raphaël Benitte",
@@ -21,8 +21,8 @@
         "!dist/tsconfig.tsbuildinfo"
     ],
     "dependencies": {
-        "@stu-dev/nivo-core": "workspace:*",
-        "@react-spring/web": "9.4.5 || ^9.7.2"
+        "@react-spring/web": "9.4.5 || ^9.7.2",
+        "@stu-dev/nivo-core": "workspace:*"
     },
     "publishConfig": {
         "access": "public"
